tests/baselines/reference/partiallyAnnotatedFunctionInferenceError.errors.txt
tests/cases/conformance/types/contextualTypes/partiallyAnnotatedFunction/partiallyAnnotatedFunctionInferenceError.ts(12,11): error TS2345: Argument of type '(t1: D, t2: any, t3: any) => void' is not assignable to parameter of type '(t: any, t1: any) => void'.
  The source signature requires more arguments (3) than are provided by the target (2).
tests/cases/conformance/types/contextualTypes/partiallyAnnotatedFunction/partiallyAnnotatedFunctionInferenceError.ts(13,11): error TS2345: Argument of type '(t1: any, t2: D, t3: any) => void' is not assignable to parameter of type '(t: any, t1: any) => void'.
  The source signature requires more arguments (3) than are provided by the target (2).
tests/cases/conformance/types/contextualTypes/partiallyAnnotatedFunction/partiallyAnnotatedFunctionInferenceError.ts(14,11): error TS2345: Argument of type '(t1: any, t2: any, t3: D) => void' is not assignable to parameter of type '(t: any, t1: any) => void'.
  The source signature requires more arguments (3) than are provided by the target (2).


==== tests/cases/conformance/types/contextualTypes/partiallyAnnotatedFunction/partiallyAnnotatedFunctionInferenceError.ts (3 errors) ====
    class C {
      test: string
    }
    
    class D extends C {
      test2: string
    }
    
    declare function testError<T extends C>(a: (t: T, t1: T) => void): T
    
    // more args
    testError((t1: D, t2, t3) => {})
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(t1: D, t2: any, t3: any) => void' is not assignable to parameter of type '(t: any, t1: any) => void'.
!!! error TS2345:   The source signature requires more arguments (3) than are provided by the target (2).
    testError((t1, t2: D, t3) => {})
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(t1: any, t2: D, t3: any) => void' is not assignable to parameter of type '(t: any, t1: any) => void'.
!!! error TS2345:   The source signature requires more arguments (3) than are provided by the target (2).
    testError((t1, t2, t3: D) => {})
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(t1: any, t2: any, t3: D) => void' is not assignable to parameter of type '(t: any, t1: any) => void'.
!!! error TS2345:   The source signature requires more arguments (3) than are provided by the target (2).
    